--- a/renderer/index.html
+++ b/renderer/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Scrabble Server</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="renderer_dist/app.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="app.css" />
 </head>
 <body>
 
@@ -13,8 +13,8 @@
     </div>
 
     <script src="renderer.js"></script>
-    <script src="renderer_dist/manifest.js"></script>
-    <script src="renderer_dist/vendor.js"></script>
-    <script src="renderer_dist/app.js"></script>
+    <script src="manifest.js"></script>
+    <script src="vendor.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
